--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-    "editor.rulers": [80]
+    "editor.rulers": [
+        80
+    ],
+    "c64.assemblerPath": "/usr/local/bin/acme",
+    "c64.debuggerEnabled": false,
+    "c64.emulatorPath": "/usr/local/bin/x64"
 }
